搜索页--隐藏热门搜索-无数据时。。文本域添加固定行高。。ios文本域添加行高

--- a/wechat/src/main/webapp/xcview/css/live_audio.css
+++ b/wechat/src/main/webapp/xcview/css/live_audio.css
@@ -271,7 +271,7 @@ word-break:break-all;
 line-height: 0.42rem;
 }
 .wrap p{
-	line-height: 0.4rem;
+	line-height: 0.4rem !important;
 }
 .wrap p img{
 	max-width: 7rem;
@@ -356,7 +356,7 @@ word-break:break-all;
 line-height: 0.42rem;
 }
 .wrap1 p{
-	line-height: 0.4rem;
+	line-height: 0.4rem !important;
 }
 .wrap1 p img{
 	max-width: 7rem;
