--- a/wechat/src/main/webapp/xcview/css/live_album.css
+++ b/wechat/src/main/webapp/xcview/css/live_album.css
@@ -284,7 +284,7 @@ textarea::-webkit-input-placeholder {
 	line-height: 0.42rem;
 }
 .wrap p{
-	line-height: 0.4rem;
+	line-height: 0.42rem !important;
 }
 .wrap p img{
 	max-width: 7rem;
@@ -369,7 +369,7 @@ textarea::-webkit-input-placeholder {
 	line-height: 0.42rem;
 }
 .wrap1 p{
-	line-height: 0.4rem;
+	line-height: 0.42rem !important;
 }
 .wrap1 p img{
 	/*width: 100%;*/
