--- a/wechat/src/main/webapp/xcview/css/live_class.css
+++ b/wechat/src/main/webapp/xcview/css/live_class.css
@@ -226,7 +226,7 @@ padding-bottom: 0.17rem;
 word-break:break-all; 
 }
 .wrap p{
-	line-height: 0.42rem;
+	line-height: 0.42rem !important;
 }
 .wrap p img{
 	/*width: 100%;*/
@@ -312,7 +312,7 @@ word-break:break-all;
 word-break:break-all; 
 }
 .wrap1 p{
-	line-height: 0.42rem;
+	line-height: 0.42rem !important;
 }
 .wrap1 p img{
 	/*width: 100%;*/
