--- a/wechat/src/main/webapp/xcview/css/live_paly.css
+++ b/wechat/src/main/webapp/xcview/css/live_paly.css
@@ -269,7 +269,7 @@ margin-top: -0.28rem;
 word-break:break-all; 
 }
 .wrap p{
-	line-height: 0.42rem;
+	line-height: 0.42rem !important;
 }
 .wrap p img{
 	/*width: 100%;*/
@@ -377,7 +377,7 @@ word-break:break-all;
 	
 }
 .wrap1 p{
-	line-height: 0.42rem;
+	line-height: 0.42rem !important;
 }
 .wrap1 p img{
 	/*width: 100%;*/
