--- a/wechat/src/main/webapp/xcview/css/school_class.css
+++ b/wechat/src/main/webapp/xcview/css/school_class.css
@@ -233,6 +233,9 @@ line-height: 0.42rem;
 	/*width: 100%;*/
 	max-width: 7rem;
 }
+.wrap p{
+	line-height: 0.42rem !important;
+}
 .zhezhao{
 	width: 100%;
 	height: 0.5rem;
@@ -315,6 +318,9 @@ line-height: 0.42rem;
 .wrap1 p img{
 	/*width: 100%;*/
 	max-width: 7rem;
+}
+.wrap1 p{
+	line-height: 0.42rem !important;
 }
 .zhezhao1{
 	width: 100%;
