回复头像变圆

--- a/online-web/src/main/webapp/web/css/school/details-album.css
+++ b/online-web/src/main/webapp/web/css/school/details-album.css
@@ -320,6 +320,8 @@ color: #999999;
 .header-img{
 	width: 60px;
 	height: 60px;
+	border-radius: 50%;
+	overflow: hidden;
 }
 .header-img img{
 	width: 100%;
@@ -370,6 +372,8 @@ word-break:break-all;
 .header-reply{
 	width: 36px;
 	height: 36px;
+	border-radius: 50%;
+	overflow: hidden;
 }
 .header-reply img{
 	width: 100%;
