--- a/online-web/src/main/webapp/web/css/header.css
+++ b/online-web/src/main/webapp/web/css/header.css
@@ -718,7 +718,7 @@ body .head-top ul li:nth-child(2){
 }	
 
 body .head-top ul li a {
-		color:#ccc;
+		color:#333;
 }
 body .head-top ul li a:hover{
 	color:green;
