--- a/wechat/src/main/webapp/xcview/css/down_load.css
+++ b/wechat/src/main/webapp/xcview/css/down_load.css
@@ -8,13 +8,15 @@ text-decoration: none;
 outline:none;
 -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
+body{
+	background: #f0f0f0;
+}
 p{font-size: 0.28rem;}
 img{display: block;}
-.wp{width: 7.5rem;margin: 0 auto;padding-bottom: 1rem;}
+.wp{width: 7.5rem;margin: 0 auto;padding-bottom: 1rem;background: #fff;}
 .wrap-header{
 	width: 100%;
 	height: 0.88rem;	
-
 }
 .header{
 	width: 7.5rem;
