--- a/wechat/src/main/webapp/xcview/css/live_class.css
+++ b/wechat/src/main/webapp/xcview/css/live_class.css
@@ -569,7 +569,7 @@ margin-top: 0.1rem;
 	box-sizing: border-box;
 	position: fixed;
     bottom: 0;
-    left: 0;
+    /*left: 0;*/
     border-top: 1px solid #f0f0f0;
     z-index: 1;
 }
@@ -651,7 +651,7 @@ margin-top: 0.1rem;
 	background:white;
 	box-sizing: border-box;
 	bottom: 0;
-	left: 0;
+	/*left: 0;*/
 	z-index: 5;
 	padding: 0.3rem 0.26rem 0.3rem;
 	
