--- a/wechat/src/main/webapp/xcview/css/recharges.css
+++ b/wechat/src/main/webapp/xcview/css/recharges.css
@@ -20,35 +20,30 @@ body{
 
 /*头部开始*/
 header {
-    width: 100%;
-    height: 1.872rem;
-    line-height: 1.872rem;
+        width: 7.5rem;
+    line-height: 0.88rem;
     background: #fff;
     position: fixed;
     top: 0;
-    left: 0;
+    left: 50%;
     z-index: 9;
-    /* margin-left: -7.275rem; */
+    margin-left: -3.75rem;
 }
 .header {
-    width: 14.851rem;
+    width: 7.5rem;
     height: 100%;
-    margin-left: 0.553rem;
-    /* padding-top: 0.298rem; */
+    margin: 0 auto;
 }
 .header_return {
     width: 2.15rem;
-    height: 1.8rem;
-    /* background: red; */
-    margin-right: 0.362rem;
-    float: left;
-    position: absolute;
-    z-index: 10;
+    height: 0.88rem;
 }
 .header_return img {
-    width: 0.511rem;
-    height: 0.915rem;
-    margin-top: 0.5rem;
+    width: 0.24rem;
+    height: 0.42rem;
+    margin-left: 0.26rem;
+    position: absolute;
+    top: 0.25rem;
 }
 .header_title {
     width: 100%;
@@ -56,10 +51,10 @@ header {
     position: absolute;
     top: 0;
     left: 0;
-    font-size: 0.766rem;
+    font-size: 0.36rem;
     text-align: center;
     color: #333;
-    z-index: 9;
+    z-index: -1;
     border-bottom: 1px solid #D8DDE6;
 }
 .header_share{
@@ -81,31 +76,34 @@ header {
 
 
 /*中间内容开始*/
+
 .recharges{
-	margin-top: 2.2rem;
+	width: 7.5rem;
+    margin: 0 auto;
+	margin-top: 0.98rem;
 }
 .recharges_limit{
 	width: 100%;
-	height: 9.872rem;
+	height: 4.64rem;
 	background: #fff;
 }
 .recharges_limit_title{
-	font-size: 0.68rem;
+	font-size: 0.32rem;
 	color: #333;
-	margin-bottom: 0.638rem;
-	padding-top: 0.638rem;
-	margin-left: 0.5rem;
+	margin-bottom: 0.29rem;
+	padding-top: 0.30rem;
+	margin-left: 0.26rem;
 }
 .recharges_limit_list ul li{
-	width: 4.468rem;
-	height: 3.149rem;
-	line-height: 3.149rem;
+	width: 2.12rem;
+	height: 1.5rem;
+	line-height: 1.5rem;
 	float: left;
 	border-radius: 4px;
 	text-align: center;
-	font-size: 0.596rem;
-	margin-left: 0.56rem;
-    margin-bottom: 0.65rem;
+	font-size: 0.28rem;
+	margin-left: 0.26rem;
+    margin-bottom: 0.3rem;
 }
 .li{
 	border: 1px solid #DEDEDE;
@@ -122,21 +120,21 @@ header {
 }
 .recharges_limit_list ul .li p{
 	width: 100%;
-	height: 0.851rem;
-    line-height: 0.851rem;
+	height: 0.4rem;
+    line-height: 0.4rem;
 }
 .recharges_limit_list ul .li .p0{
-	margin-top: 0.638rem;
-	margin-bottom: 0.213rem;
+	margin-top: 0.3rem;
+	margin-bottom: 0.1rem;
 }
 .recharges_limit_list ul .li0 p{
 	width: 100%;
-	height: 0.851rem;
-    line-height: 0.851rem;
+	height: 0.4rem;
+    line-height: 0.4rem;
 }
 .recharges_limit_list ul .li0 .p0{
-	margin-top: 0.638rem;
-	margin-bottom: 0.213rem;
+	margin-top: 0.3rem;
+	margin-bottom: 0.1rem;
 }
 
 
@@ -198,23 +196,24 @@ header {
 	margin-bottom: 0.426rem;
 }
 .footer{
-	width: 100%;
-	height: 2.085rem;
-	line-height: 2.085rem;
-	text-align: center;
-	font-size: 0.638rem;
-	position: fixed;
-	bottom: 0;
-	left: 0;
-	background: #fff;
-	/*border-top: 1px solid #D8DDE6;*/
-	background: #00BC12;
+	    width: 7.5rem;
+    height: 0.98rem;
+    line-height: 0.98rem;
+    text-align: center;
+    font-size: 0.36rem;
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    background: #fff;
+    /* border-top: 1px solid #D8DDE6; */
+    background: #00BC12;
+    margin-left: -3.75rem;
 }
 
 .footer_div_btn{
 	width: 100%;
-	height: 2.085rem;
-	line-height: 2.085rem;
+	height: 0.98rem;
+	line-height: 0.98rem;
 	color: #fff;
 }
 /*底部结束*/
@@ -236,13 +235,13 @@ header {
 	z-index: 9;
 }
 .success_main{
-	width: 11.489rem;
-    height: 5.681rem;
+	width: 5.4rem;
+    height: 2.67rem;
     position: fixed;
     top: 50%;
     left: 50%;
-    margin-top: -4rem;
-    margin-left: -5.7rem;
+    margin-left: -2.7rem;
+    margin-top: -1.385rem;
     background: #fff;
     z-index: 9;
     border-radius: 16px;
@@ -252,37 +251,26 @@ header {
 	text-align: center;
 }
 .success_main .one{
-	font-size: 0.681rem;
-	color: #333;
-	margin-top: 0.979rem;
-	margin-bottom: 0.426rem;
+	    font-size: 0.32rem;
+    color: #333;
+    margin-top: 0.46rem;
+    margin-bottom: 0.2rem;
 }
 .success_main .two{
-	font-size: 0.553rem;
-	color: #333;
-	margin-bottom: 0.851rem;
-}
-.success_main .three{
-	/*font-size: 0.638rem;
-	color: #00BC12;
-	width: 100%;
-	height: 1.851rem;
-	line-height: 1.851rem;
-	text-align: center;
-	border-top: 1px solid #D8DDE6;*/
+	    font-size: 0.26rem;
+    color: #333;
+    margin-bottom: 0.4rem;
 }
 
 .success_main .three{
-	font-size: 0.638rem;
-	color: #00BC12;
-	width: 100%;
-	/*height: 1.851rem;
-	line-height: 1.851rem;*/
-    height: 1.75rem;
-    line-height: 1.75rem;
-	/*text-align: center;*/
-	border-top: 1px solid #D8DDE6;
-	position: absolute;
+	font-size: 0.3rem;
+    color: #00BC12;
+    width: 100%;
+    height: 0.87rem;
+    line-height: 0.87rem;
+    /* text-align: center; */
+    border-top: 1px solid #D8DDE6;
+    position: absolute;
     bottom: 0;
     text-align: center;
 }
@@ -319,13 +307,13 @@ header {
 	z-index: 9;
 }
 .defeated_main{
-	width: 11.489rem;
-    height: 5.681rem;
+	    width: 5.4rem;
+    height: 2.67rem;
     position: fixed;
     top: 50%;
     left: 50%;
-    margin-top: -4rem;
-    margin-left: -5.7rem;
+    margin-top: -1.336rem;
+    margin-left: -2.385rem;
     background: #fff;
     z-index: 9;
     border-radius: 16px;
@@ -335,26 +323,24 @@ header {
 	text-align: center;
 }
 .defeated_main .one{
-	font-size: 0.681rem;
-	color: #333;
-	margin-top: 0.979rem;
-	margin-bottom: 0.426rem;
+	font-size: 0.32rem;
+    color: #333;
+    margin-top: 0.46rem;
+    margin-bottom: 0.20rem;
 }
 .defeated_main .two{
-	font-size: 0.553rem;
-	color: #333;
-	margin-bottom: 0.851rem;
+	    font-size: 0.26rem;
+    color: #333;
+    margin-bottom: 0.4rem;
 }
 .defeated_main .three{
-	font-size: 0.638rem;
-	color: #00BC12;
-	width: 100%;
-	/*height: 1.851rem;
-	line-height: 1.851rem;*/
-    height: 1.75rem;
-    line-height: 1.75rem;
-	/*text-align: center;*/
-	border-top: 1px solid #D8DDE6;
+	    font-size: 0.3rem;
+    color: #00BC12;
+    width: 100%;
+    height: 0.81rem;
+    line-height: 0.81rem;
+    /* text-align: center; */
+    border-top: 1px solid #D8DDE6;
 }
 .defeated_main .three .three_btn0{
 	width: 49%;
@@ -374,37 +360,38 @@ header {
 
 /*选择支付方式开始*/
 .weixin_pay{
-	width: 100%;
-	height: 100%;
-	background: #fff;
-	margin-top: 0.426rem;
-	margin-bottom: 2.5rem;
-    padding: 0.638rem 0;
+	width: 7.5rem;
+    height: 100%;
+    background: #fff;
+    margin: 0 auto;
+    margin-top: 0.2rem;
+    /* margin-bottom: 2.5rem; */
+    padding: 0.3rem 0;
 }
 .weixin_pay_title{
 	width: 100%;
-	text-indent: 0.553rem;
-	font-size: 0.68rem;
+	text-indent: 0.26rem;
+	font-size: 0.32rem;
 	color: #333333;
-	margin-bottom: 0.638rem;
+	margin-bottom: 0.29rem;
 }
 .weixin_pay .div{
-	margin-left: 0.553rem;
+	margin-left: 0.26rem;
 }
 .weixin_pay .div .pay_div{
-	width: 4.511rem;
-	height: 2.128rem;
-	line-height: 2.128rem;
-	border: 1px solid #DEDEDE;
-	border-radius: 4px;
-	font-size: 0.7rem;
-	color: #666666;
-	text-align: center;
-	float: left;
-	margin-right: 0.638rem;
+	width: 2.1rem;
+    height: 1rem;
+    line-height: 1rem;
+    border: 1px solid #DEDEDE;
+    border-radius: 4px;
+    font-size: 0.28rem;
+    color: #666666;
+    text-align: center;
+    float: left;
+    margin-right: 0.638rem;
 }
 .weixin_pay .div .pay_div img{
-	width: 1.277rem;
+	width: 0.6rem;
 	vertical-align: middle;
 }
 .pay_border{
