--- a/wechat/src/main/webapp/xcview/css/share/share.css
+++ b/wechat/src/main/webapp/xcview/css/share/share.css
@@ -5,24 +5,42 @@
 	display: none;
 }
 .share_bg{
-	width: 100%;
-	height: 100%;
-	background: #000;
-	opacity: 0.5;
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 999999;
+	/* width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.5;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999999; */
+    width: 7.5rem;
+    height: 100%;
+    background: #000;
+    opacity: 0.5;
+    position: fixed;
+    top: 0;
+    left: 50%;
+    z-index: 999999;
+    margin-left: -3.75rem;
 }
 .share_main{
-	width: 6.98rem;
+	/* width: 6.98rem;
+        height: 2.86rem;
+        background: #fff;
+        margin: 0 auto;
+        position: fixed;
+        left: 0.25rem;
+        bottom: 1.3rem;
+        z-index: 999999; */
+            width: 6.98rem;
     height: 2.86rem;
     /* background: #fff; */
     margin: 0 auto;
     position: fixed;
-    left: 0.25rem;
+    left: 50%;
     bottom: 1.3rem;
     z-index: 999999;
+    margin-left: -3.49rem;
 }
 .share_main_bg{
 	width: 100%;
@@ -73,21 +91,25 @@
     display: none;
 }
 .weixin_ceng_bg {
-    width: 100%;
+    width: 7.5rem;
     height: 100%;
     background: #000;
     opacity: 0.5;
     position: fixed;
-    left: 0;
+    left: 50%;
     top: 0;
     z-index: 999999999999999;
+    margin-left: -3.75rem;
 }
 .weixin_img {
     /*background: red;*/
     position: fixed;
     z-index: 99999999999;
     top: 0rem;
-    right: 0;
+    left: 50%;
+    width: 7.5rem;
+    height: 100%;
+    margin-left: -3.75rem;
 }
 .weixin_img img {
     position: absolute;
