--- a/wechat/src/main/webapp/xcview/css/live_select_aibum.css
+++ b/wechat/src/main/webapp/xcview/css/live_select_aibum.css
@@ -763,25 +763,23 @@ color: #666666;
 }
 /*评论主播弹出框*/
 .bg_modal{
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	display: none;
+	width: 7.5rem;
+    height: 100%;
+    position: fixed;
+    display: none;
     top: 0;
-    left: 0;
-	background: rgba(0,0,0,.1);
+    background: rgba(0,0,0,.1);
+    z-index: 999999;
 }
 .wrapAll_comment{
 	width: 7.5rem;
     position: fixed;
-
 	display: none;
 	background:white;
 	box-sizing: border-box;
 	bottom: 0;
-	left: 50;
-	/*margin-left: -3.75rem;*/
-	z-index: 5;
+	/*left: 50;*/
+	z-index: 9999991;
 	padding: 0.3rem 0.26rem 0.3rem;
 	
 }
