--- a/wechat/src/main/webapp/xcview/css/details.css
+++ b/wechat/src/main/webapp/xcview/css/details.css
@@ -1,5 +1,18 @@
 @CHARSET "UTF-8";
 
+
+header{
+	width: 7.5rem;
+    height: 0.88rem;
+    position: fixed;
+    top: 0;
+    left: 50%;
+    margin-left: -3.75rem;
+    font-size: 0.36rem;
+    text-align: center;
+    color: #333;
+    border-bottom: 1px solid #d8dde6;
+}
 .guanzhu1 {
 	display: none;
 }
@@ -38,7 +51,8 @@
 }
 
 .facebox.facebox-mobile {
-	margin-top: 0.2rem;
+	width: 7.5rem !important;
+	margin-top: 0rem;
 }
 
 #mCSB_1_container {
@@ -57,8 +71,8 @@
 }
 
 .coze_cen_ri {
-	margin-top: 0.4rem;
-	margin-bottom: 0.4rem;
+	margin-top: 0.2rem;
+	/*margin-bottom: 0.4rem;*/
 }
 
 .facebox-mobile {
@@ -125,9 +139,13 @@
 }
 
 .grabble_left {
-	width: 1.8rem;
-	height: 1.8rem;
-	float: left;
+	width: 1.24rem;
+    height: 0.88rem;
+    /* background: red; */
+    margin-right: 0.362rem;
+    float: left;
+    position: absolute;
+    z-index: 10;
 }
 
 .details_anchor_title {
@@ -163,7 +181,7 @@
 }
 
 .coze_bottom img {
-	margin-top: 0.25rem;
+	/*margin-top: 0.25rem;*/
 }
 
 .facebox-mobile {
@@ -193,8 +211,9 @@
 }
 
 .face_img01 {
-	width: 1.2rem;
-	height: 1.2rem;
+	width: 0.7rem;
+    height: 0.7rem;
+    margin-top: 0.1rem;
 }
 
 .give_a1_span02 img {
@@ -294,7 +313,7 @@ i {
 
 .coze_bottom {
 	padding: 0 !important;
-	height: 2.125rem;
+	height: 0.98rem;
 }
 
 .poson {
@@ -315,16 +334,16 @@ i {
 
 
 .details_bottom {
-	width: 100%;
+	width: 7.5rem;
 	position: fixed;
-	top: 2.85rem;
+	top: 1.2rem;
 }
 
 .details_size {
 	position: absolute;
     bottom: -0.5rem;
     min-width: 7.6rem;
-    font-size: 0.64rem;
+    font-size: 0.24rem;
     color: #fff;
     text-indent: 0.4rem;
     right: 0.4rem;
@@ -334,16 +353,16 @@ i {
 }
 
 .details_footer_width ul li {
-	margin-left: 1.9rem;
+	margin-left: 0.95rem;
 }
 
 /*排行版无排名时图片*/
 .no_git_pic{
-	    width: 3.22rem;
-    height: 4.85rem;
+	    width: 1.5rem;
+    height: 2.59rem;
     background: url(../images/no_git.png) no-repeat center;
     background-size: 100% 100%;
-    margin: 3.32rem auto 0;
+    margin: 2.5rem auto 0;
 }
 
 
