--- a/wechat/src/main/webapp/xcview/css/live_paly.css
+++ b/wechat/src/main/webapp/xcview/css/live_paly.css
@@ -714,13 +714,14 @@ color: white;
 
 /*评论主播弹出框*/
 .bg_modal{
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	display: none;
+	width: 7.5rem;
+    height: 100%;
+    position: fixed;
+    display: none;
     top: 0;
-    left: 0;
-	background: rgba(0,0,0,.1);
+    left: 50%;
+    background: rgba(0,0,0,.1);
+    margin-left: -3.75rem;
 }
 .wrapAll_comment{
 	width: 7.5rem;
