--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -61,7 +61,7 @@
 	margin-top: 20px;
 }*/
 .select_box{
-	width: 950px;
+	width: 960px;
     display: block;
     float: right;
     vertical-align: top;
@@ -127,7 +127,7 @@
 	color: #00bc12;
 }
 /*<!--课程/直播/资源/盒子-->*/
-.wrap_box .little_box{
+.contentWrap .little_box{
 	width: 950px;
     display: block;
     float: right;
@@ -172,6 +172,237 @@
 .doctor_inf .picModal .icon-xiangji {
   font-size: 12px;
 }
+/*我的动态*/
+.activity-wrap{
+	padding: 20px;
+	background: white;
+	position: relative;
+}
+.publish-activity{
+	width: 920px;
+	height: 120px;
+	background: #FAFAFA;
+border: 1px solid #DEDEDE;
+border-radius: 8px;
+resize: none;
+padding: 8px;
+outline: none;
+}
+.activity-nav{
+	margin: 20px 0 0;
+	overflow: hidden;
+}
+.activity-nav li{
+	list-style: none;
+	float: left;
+	margin-right: 20px;
+}
+.activity-nav li img{
+	margin-right: 8px;
+	float: left;
+}
+.activity-nav li .write-left{
+	float: right;
+	margin-top: 2px;
+}
+.activity-nav .active{
+	color: #00bc12;
+}
+.main-nav-box{
+	/*display: none;*/
+}
+.open-photo p{
+	display: inline-block;
+	font-size: 14px;
+	float: right;
+	margin-top: 2px;
+	margin-bottom: 0;
+}
+/*图片区域*/
+.main-nav-box .photo-wrap{
+	border-top: 1px solid #f0f0f0;
+	padding-top: 17px;
+	overflow: hidden;
+	margin-top: 20px;
+}
+.photo-number{
+	overflow: hidden;
+}
+.photo-number p{
+	float: left;
+	margin: 0;
+}
+.photo-number img{
+	float: right;
+	margin-top: 5px;
+}
+.save-photo ul{
+	overflow: hidden;
+	margin: 0 0 10px;
+}
+.save-photo li{
+	float: left;
+	width: 300px;
+	height: 300px;
+	position: relative;
+	margin: 10px 10px 0 0;
+}
+.save-photo li:nth-child(3n){
+	margin-right: 0;
+}
+.save-photo li img{
+	width: 100%;
+	height: 100%;
+}
+.save-photo li p{
+	width: 24px;
+	height: 24px;
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+.save-photo li p img{
+	cursor: pointer;
+}
+/*视频区域*/
+.video-wrap{
+	border-top: 1px solid #f0f0f0;
+	padding-top: 17px;
+	overflow: hidden;
+	margin-top: 20px;
+	position: relative;
+}
+.video-btn p{
+	display: inline-block;
+	cursor: pointer;
+	font-size: 16px;
+}
+.video-btn p:hover{
+	color: #00bc12;
+}
+.close-video{
+	position: absolute;
+	right: 20px;
+	top: 25px;
+}
+.video-tip .video-prompt{
+	font-size: 16px;
+	color: #999999;
+}
+.video-title-wrap{
+	margin: 10px 0 20px;
+}
+.video-title input{
+	border: 1px solid #F0F0F0;
+	width: 280px;
+	height: 34px;
+	outline: none;
+	padding-left: 8px;
+}
+.video-cover .video-cover-pic{
+	display: inline-block;
+    width: 260px;
+    height: 147px;
+    border: 1px solid #f0f0f0;
+    vertical-align: middle;
+    margin-right: 30px;
+    position: relative;
+    background: #F0F0F0;
+}
+.video-cover-pic img{
+	width: 100%;
+	height: 100%;
+}
+.btn-deliver{
+	width: 92px;
+	height: 36px;
+	background: #00BC12;
+	border-radius: 4px;
+	color: white;
+    position: absolute;
+    right: 20px;
+    top: 155px;
+    border: 0;
+    outline: none;
+}
+/*医案区域*/
+.consilia-wrap{
+	border-top: 1px solid #f0f0f0;
+	padding-top: 17px;
+	overflow: hidden;
+	margin-top: 20px;
+	position: relative;
+}
+.consilia-status-nav ul{
+	overflow: hidden;
+	margin: 0;
+	border-bottom: 1px solid #f0f0f0;
+}
+.consilia-status-nav ul li{
+	float: left;
+	margin-right: 30px;
+	padding-bottom: 15px;
+	border-bottom: 3px solid transparent;
+	color: #999999;
+	cursor: pointer;
+}
+.consilia-status-nav ul .active{
+	border-bottom: 3px solid #00bc12;
+	color: #333333;
+}
+.close-consilia{
+	position: absolute;
+	right: 0px;
+	top: 25px;
+}
+.consilia-search-wrap{
+	padding-top: 20px;
+    overflow: hidden;
+    width: 895px;
+    margin: 0 auto;
+}
+.consilia-search-wrap span{
+	float: left;
+	margin-top: 9px;
+	color: #666666;
+}
+.consilia-search-wrap .search-input{
+	width: 850px;
+	height: 34px;
+	border: 1px solid #f0f0f0;
+	position: relative;
+}
+.consilia-search-wrap .search-input input{
+	width: 800px;
+    height: 32px;
+    border: 0;
+    outline: none;
+    padding-left: 8px;
+}
+ .consilia-search-wrap .search-input img{
+ 	position: absolute;
+ 	right: 15px;
+ 	top: 4px;
+ 	cursor: pointer;
+ }   
+.consilia-result{
+	padding-left: 13px;
+	margin: 20px 0;
+}
+.result-list-title{
+	background: #f0f0f0;
+	height: 40px;
+	line-height: 40px;
+	padding-left: 42px;
+}
+
+.result-list-title span{
+	margin-left: 288px;
+}
+/*暂停*/
+
+
+
 
 
 
