--- a/wechat/src/main/webapp/xcview/css/physician/index.css
+++ b/wechat/src/main/webapp/xcview/css/physician/index.css
@@ -128,20 +128,20 @@ header{
     color: #333;
     margin-left: 0.26rem;
     padding-top: 0.3rem;
-    /*padding-bottom: 0.2rem;*/
+    padding-bottom: 0.2rem;
 }
 .physician_title img{
     width: 0.15rem;
     margin-right: 0.26rem;
     float: right;
-    margin-top: 0.08rem;
+    margin-top: 0.09rem;
 }
 .physician_cen:first-child{
     padding-top: 0 !important;
 }
 .physician_cen{
     width: 7.24rem;
-    height: 1.4rem;
+    min-height: 1.4rem;
     float: right;
     border-bottom: 1px solid #F0F0F0;
     padding-top: 0.2rem;
@@ -188,14 +188,14 @@ header{
     float: left;
 }
 .hospital{
-    width: 5.8rem;
-    /*background: red;*/
+    width: 5.54rem;
     float: right;
-    height: 0.33rem;
+    min-height: 0.33rem;
     line-height: 0.33rem;
-    /* font-size: 0.2rem; */
     font-size: 0.24rem;
     color: #999999;
+    padding-right: 0.26rem;
+    padding-bottom: 0.2rem;
 }
 /*中间内容结束*/
 
