--- a/wechat/src/main/webapp/xcview/css/apprentice/apprentice.css
+++ b/wechat/src/main/webapp/xcview/css/apprentice/apprentice.css
@@ -118,14 +118,15 @@ header{
     margin-left: -3.75rem;
 }
 .footer ul li{
-	width: 25%;
-	float: left;
-	text-align: center;
+	width: 0.78rem;
+    float: left;
+    text-align: center;
+    margin-left: 0.6rem;
 }
 .footer ul li a{
 	display: block;
 	width: 0.486rem;
-	height: 0.4rem;
+	height: 0.42rem;
 	text-align: center;
 	margin: 0 auto;
 	margin-bottom: 0.06rem;
@@ -145,7 +146,7 @@ header{
 }
 .footer_two{
 	background: url(/xcview/images/learn_two.png) no-repeat center;
-	background-size: 0.38rem 0.38rem;
+	background-size: 0.4rem 0.4rem;
 	
 }
 .footer_three{
@@ -154,7 +155,7 @@ header{
 }
 .footer_four{
 	background: url(/xcview/images/my_four.png) no-repeat center;
-	background-size: 0.38rem 0.4rem;
+	background-size: 0.38rem 0.42rem;
 }
 /*底部结束*/
 
