--- a/online-web/src/main/webapp/web/css/liveVideo.css
+++ b/online-web/src/main/webapp/web/css/liveVideo.css
@@ -134,7 +134,7 @@ marquee {
   background: #1f1f1f;
   line-height: 64px;
   padding-right: 310px;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 .livePlayer .liveMess .lb {
   display: none;
