--- a/wechat/src/main/webapp/xcview/css/details.css
+++ b/wechat/src/main/webapp/xcview/css/details.css
@@ -86,32 +86,33 @@ header{
 }
 
 .weixin_ceng_bg {
-	width: 100%;
-	height: 100%;
-	background: #000;
-	opacity: 0.5;
-	position: fixed;
-	left: 0;
-	top: 0;
-	z-index: 99999999;
+	width: 7.5rem;
+    height: 100%;
+    background: #000;
+    opacity: 0.3;
+    position: fixed;
+    left: 50%;
+    top: 0;
+    z-index: 99999999;
+    margin-left: -3.75rem;
 }
 
 .weixin_img {
-	/* width:7rem;
-		height:7rem; */
-	/* background: red; */
-	/* background: red; */
-	position: fixed;
-	z-index: 999999999999;
-	top: 0rem;
-	right: 0;
+	/*background: red;*/
+    position: fixed;
+    z-index: 999999999999;
+    top: 0rem;
+    left: 50%;
+    width: 7.5rem;
+    height: 3rem;
+    margin-left: -3.75rem;
 }
 
 .weixin_img img {
 	position: absolute;
 	top: 0rem;
 	right: 0.3rem;
-	width: 6rem;
+	width: 2rem;
 	z-index: 9999999999999;
 }
 
@@ -362,7 +363,7 @@ i {
     height: 2.59rem;
     background: url(../images/no_git.png) no-repeat center;
     background-size: 100% 100%;
-    margin: 2.5rem auto 0;
+    margin: 4.5rem auto 0;
 }
 
 
