--- a/wechat/src/main/webapp/xcview/css/physician/physician_list.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physician_list.css
@@ -185,14 +185,14 @@ header{
     margin-right: 0.26rem;
 }   
 .header_seek span{
-	font-size: 0.3rem;
-	display: inherit;
-	margin-left: 0.35rem;
-	color: #000;
-	overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    width: 6rem;
+	/* font-size: 0.3rem;
+    display: inherit;
+    margin-left: 0.35rem;
+    color: #000;
+    overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        width: 6rem; */
 }
 .header_seek_main {
     position: absolute;
